Actually fix layout issue this time

--- a/src/scss/common/questions.scss
+++ b/src/scss/common/questions.scss
@@ -16,7 +16,7 @@
   }
 }
 
-.content-value {
+.content-chunk > .content-value {
   > .row {
     margin: 0;
     > .col {
